# novus-mundus

./: .gitignore  Cargo.toml  DAILY_ACTIVITY_MINIGAMES.md  GAME_AUTHORITY_API.md  GAME_DESIGN.md  PLAYER_JOURNEY_GAMEPLAN.md  README.md  TECHNICAL_ARCHITECTURE.md  TOKENOMICS.md  TOKENOMICS_FLOW.md  dev-notes.md  package.json  skills-lock.json
programs/novus_mundus/: Cargo.toml
programs/novus_mundus/.claude/: KINGDOM_IMPLEMENTATION_STATUS.md  ralph-loop.local.md
programs/novus_mundus/src/: constants.rs  error.rs  lib.rs  macros.rs  player_and_user_state.rs  random_range.rs  token_helpers.rs  types.rs
programs/novus_mundus/src/events/: arena.rs  castle.rs  combat.rs  dungeon.rs  economy.rs  estate.rs  expedition.rs  forge.rs  game_event.rs  hero.rs  initialization.rs  kingdom.rs  loot.rs  mod.rs  name.rs  progression.rs  rally.rs  reinforcement.rs  research.rs  sanctuary.rs  shop.rs  team.rs  token.rs  travel.rs
programs/novus_mundus/src/helpers/: account.rs  dungeon.rs  estate.rs  event_scoring.rs  hero.rs  inventory.rs  kingdom.rs  mod.rs  name_service.rs  nft_parser.rs  token_ops.rs
programs/novus_mundus/src/logic/: biome.rs  calculations.rs  combat.rs  consume.rs  eligibility.rs  fibonacci.rs  golden_math.rs  location.rs  mod.rs  progression.rs  rewards.rs  safe_math.rs  stamina.rs  terrain.rs  time_cycle.rs
programs/novus_mundus/src/processor/: mod.rs
programs/novus_mundus/src/processor/arena/: challenge_player.rs  claim_daily_reward.rs  claim_master_reward.rs  close_season.rs  create_season.rs  join_season.rs  mod.rs  update_loadout.rs
programs/novus_mundus/src/processor/castle/: appoint_court.rs  attack_castle.rs  cancel_upgrade.rs  claim_castle_rewards.rs  claim_garrison_loot.rs  claim_vacant_castle.rs  complete_upgrade.rs  court_cleanup.rs  create_castle.rs  dismiss_court.rs  finalize_transition.rs  force_remove_king.rs  garrison_cleanup.rs  initiate_upgrade.rs  join_garrison.rs  leave_garrison.rs  mod.rs  relieve_garrison.rs  resign_court.rs  rewards_cleanup.rs  update_castle_config.rs  update_castle_status.rs
programs/novus_mundus/src/processor/combat/: attack_encounter.rs  attack_player.rs  mod.rs
programs/novus_mundus/src/processor/cosmetic/: equip.rs  mod.rs
programs/novus_mundus/src/processor/dungeon/: attack.rs  attack_multi.rs  choose_relic.rs  claim.rs  claim_leaderboard_prize.rs  create_leaderboard.rs  create_template.rs  enter.rs  flee.rs  interact.rs  mod.rs  resume.rs
programs/novus_mundus/src/processor/economy/: collect_resources.rs  deposit_novi.rs  hire_units.rs  mint_for_prize.rs  mod.rs  (+6 more)
programs/novus_mundus/src/state/: arena.rs  building_template.rs  castle.rs  city.rs  dungeon.rs  encounter.rs  estate.rs  event.rs  expedition.rs  game_engine.rs  hero.rs  inventory.rs  location.rs  loot.rs  mod.rs  oracle_quote.rs  player.rs  progression.rs  rally.rs  reinforcement.rs  research.rs  shop.rs  team.rs
programs/novus_mundus/src/utils/: fibonacci.rs  hero_uri.rs  hint.rs  io.rs  log_format.rs  misc.rs  mod.rs  mundus_tree.rs  rent.rs  reward.rs
programs/novus_mundus/src/validation/: mod.rs
programs/novus_mundus/tests/: biome_wire_vector.rs  biome_wire_vector_knobs.rs  runme.rs
sdks/p-core/: Cargo.toml  README.md
sdks/p-core/src/: lib.rs
sdks/p-core/src/instructions/: add_collection_plugin_v1.rs  add_plugin_v1.rs  approve_collection_plugin_authority_v1.rs  approve_plugin_authority_v1.rs  burn_collection_v1.rs  burn_v1.rs  collect.rs  compress_v1.rs  create_collection_v1.rs  create_collection_v2.rs  create_v1.rs  create_v2.rs  decompress_v1.rs  execute_v1.rs  external_plugin_adapter.rs  mod.rs  remove_collection_plugin_v1.rs  remove_plugin_v1.rs  revoke_collection_plugin_authority_v1.rs  revoke_plugin_authority_v1.rs  transfer_v1.rs  update_collection_info_v1.rs  update_collection_plugin_v1.rs  update_plugin_v1.rs  update_v1.rs  update_v2.rs
sdks/p-core/src/plugins/: attributes.rs  mod.rs  plugin_types.rs
sdks/p-core/src/state/: asset.rs  collection.rs  mod.rs  update_authority.rs
sdks/p-switchboard/: Cargo.toml
sdks/p-switchboard/src/: ed25519.rs  feed_info.rs  ix_sysvar.rs  lib.rs  queue.rs  quote.rs  verifier.rs
sdks/p-token-metadata/: Cargo.toml
sdks/p-token-metadata/src/: lib.rs
sdks/p-token-metadata/src/instructions/: create_metadata_account_v3.rs  mod.rs
sdks/tld-house/: Cargo.toml
sdks/tld-house/src/: lib.rs
sdks/tld-house/src/instructions/: mod.rs  set_main_domain.rs
(+1815 files in other folders)
