[workspace]
members = [
    "programs/*",
    "sdks/p-core",
    "sdks/alt-name-service",
    "sdks/p-pyth"
]
resolver = "2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
]