[package]
name = "novus_mundus"
version = "0.1.0"
description = "Created with Pinocchio"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "novus_mundus"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test-bpf = []
dao-enabled = []  # Enable DAO authorization checks (disable for testing)

[dependencies]
pinocchio = "0.9.2"
pinocchio-token = "0.4.0"
pinocchio-system = "0.3.0"
pinocchio-associated-token-account = "0.2.0"
pinocchio-pubkey = "0.3.0"
pinocchio-log = "0.5.1"
p-core = { path = "../../sdks/p-core", features = ["no-panic-handler"] }
alt-name-service = { path = "../../sdks/alt-name-service" }
tld-house = { path = "../../sdks/tld-house" }
libm = "0.2"
