[package]
name = "novus_mundus"
version = "0.1.0"
description = "Created with Pinocchio"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "novus_mundus"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test-bpf = []

[dependencies]
pinocchio = { version = "0.10.2", features = ["cpi", "copy"] }
pinocchio-token = "0.5.0"
pinocchio-system = "0.5.0"
pinocchio-associated-token-account = "0.3.0"
pinocchio-log = "0.5.1"
p-core = { path = "../../sdks/p-core" }
p-pyth = { path = "../../sdks/p-pyth", features = ["no-panic-handler"] }
p-switchboard = { path = "../../sdks/p-switchboard", features = ["no-panic-handler"] }
alt-name-service = { path = "../../sdks/alt-name-service" }
tld-house = { path = "../../sdks/tld-house" }
libm = "0.2"
five8 = "0.1"
five8_const = "0.1"
const-crypto = "0.3.0"
solana-address = { version = "2.2.0", features = ["curve25519", "decode"] }
solana-sha256-hasher = { version = "3.1.0", default-features = false }
sha2 = { version = "0.10.8", default-features = false }

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
]
