[package]
name = "p-core"
version = "0.1.0"
edition = "2021"

[dependencies]
pinocchio = "0.9.2"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.3.0"
pinocchio-log = "0.5.1"

[features]
default = []
no-panic-handler = []  # Disable panic handler when used as a library

[lib]
crate-type = ["lib"]
name = "p_core"