[package]
name = "tld-house"
version = "0.2.0"
description = "CPI client for TLD House program"
edition = "2021"

[lib]
crate-type = ["lib"]

[features]
default = []

[dependencies]
pinocchio = { version = "0.10.2", features = ["cpi"] }
solana-address = { version = "2", features = ["decode", "curve25519"] }
